# farcaster-mcp

./: .bandit  .dockerignore  .env.example  .gitleaks.toml  Dockerfile  README.md  farcaster_mcp.py  pyproject.toml
.github/: SECURITY.md  dependabot.yml
.github/scripts/: pre-push-security-check.sh
.github/workflows/: security-validation.yml
